[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/player/guns/bullet/Bullet.gd" type="Script" id=1]
[ext_resource path="res://assets/guns/bullets/bulletRed1_outline.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="Bullet" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="BlastArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlastArea"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
